# autocomplete

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod
cmd/server/: main.go
cmd/server/static/: index.html
finetune/: benchmark.py  benchmark_100.py  benchmark_quant.py  convert_to_gguf.py  finetune_qwen.ipynb  prepare_data.py  pyproject.toml  train.py
internal/config/: config.go
internal/handler/: autocomplete.go  handler.go  health.go  middleware.go
internal/llm/: client.go  server.go
